--- a/src/modules/home/components/Contacts/Contacts.module.scss
+++ b/src/modules/home/components/Contacts/Contacts.module.scss
@@ -10,7 +10,6 @@
 
 .inner {
   @include flex-align(flex-end);
-  gap: 63px;
   position: sticky;
   top: 400px;
 
@@ -18,7 +17,6 @@
     flex-direction: column;
     align-items: baseline;
     position: unset;
-    gap: 40px;
   }
 }
 
