--- a/src/modules/home/components/Skills/Skills.module.scss
+++ b/src/modules/home/components/Skills/Skills.module.scss
@@ -1,12 +1,10 @@
 .container {
   @include flex-align(flex-start);
-  gap: 63px;
   margin-bottom: 400px;
 
   @include media-laptop {
     flex-direction: column;
     margin-bottom: 100px;
-    gap: 40px;
   }
 }
 
@@ -21,6 +19,10 @@
     width: 100%;
   }
 
+  @include media-tablet {
+    gap: unset;
+  }
+
   &-item {
     max-width: 270px;
     width: 100%;
@@ -32,8 +34,9 @@
 
     @include media-tablet {
       padding-left: 20px;
+      margin-right: 40px;
+      margin-bottom: 40px;
     }
-
   }
 
   &-title {
