--- a/src/modules/layout/components/Footer/Footer.module.scss
+++ b/src/modules/layout/components/Footer/Footer.module.scss
@@ -25,17 +25,20 @@
 
 .socials {
   @include flex-align(center);
-  gap: 60px;
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
 
-  @include media-laptop {
-    gap: 20px;
-  }
-
   @include media-tablet {
     margin-left: 0;
+  }
+
+  li:not(:last-child) {
+    margin-right: 60px;
+
+    @include media-laptop {
+      margin-right: 20px;
+    }
   }
 
   &-list {
